# robot-cloud-sim

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
apps/: CMakeLists.txt  auv_main.cpp  boat_main.cpp  main.cpp  multirotor_main.cpp
include/auv/: auv_data.h  auv_dynamics.h  auv_rpc_callback.h  auv_server.h  auv_simulator.h
include/boat/: boat_data.h  boat_dynamics.h  boat_rpc_callback.h  boat_server.h  boat_simulator.h
include/core/: dynamics.h  logging.h  math_utils.h  rpc_data.h  rpc_manager.h  server.h  sim_component.h  simulator.h  tcp_manager.h  thruster.h  time.h
include/multirotor/: multirotor_dynamics.h  multirotor_simulator.h
include/web/: server.h
scripts/: clean.sh  compile.sh  cp_static.sh  run.sh  server_setup.sh  wclean.bat  wcompile.bat  wcp_static.bat  winit.bat
server/static/boat/css/: main.css
server/templates/: boat_sim.html
src/: CMakeLists.txt
src/auv/: CMakeLists.txt  auv_dynamics.cpp  auv_msg.proto  auv_server.cpp  auv_simulator.cpp
src/boat/: CMakeLists.txt  boat_dynamics.cpp  boat_msg.proto  boat_server.cpp  boat_simulator.cpp
src/core/: CMakeLists.txt  logging.cpp  math_utils.cpp  server.cpp  sim_component.cpp  simulator.cpp  tcp_manager.cpp
src/msg/: CMakeLists.txt  boat_msg.proto  boat_rpc.proto  myprotobuf.cmake
src/multirotor/: CMakeLists.txt  multirotor_dynamics.cpp  multirotor_simulator.cpp
src/web/: CMakeLists.txt  server.cpp
templates/: boat_sim.html  crow_test.html
tools/client_test/: Pipfile  README.md  build_protos.sh  main.py  protos_init.py  wbuild_protos.bat
tools/linear_system_analysis/: Linear Boat System.ipynb  Pipfile
tools/linear_system_analysis/.ipynb_checkpoints/: Actuators-checkpoint.ipynb
tools/server_test/: main.py
